--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0-rc02'
+
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
