slider eklendi ve mainactivity'de küçük düzenlemeler yapıldı

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <activity android:name=".HelpEnvironment"></activity>
         <activity android:name=".Environment" />
         <activity android:name=".Statistics" />
+        <activity
+            android:name=".ActivitySlider"
+            android:theme="@style/AppThemeWithoutNavbar"/>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
