--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tigers.remote_h">
-    <uses-feature android:name="android.hardware.camera"
-        android:required="true" />
-    <uses-permission android:name="android.Manifest.permission.RECORD_AUDIO"/>
 
     <application
         android:name=".Notifications"
@@ -13,20 +10,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HelpEnvironment"></activity>
+        <activity android:name=".ResultEnvironment"></activity>
+        <activity android:name=".HelpEnvironment" />
         <activity android:name=".Environment" />
         <activity android:name=".Statistics" />
-        <activity
-            android:name=".ActivitySlider"
-            android:theme="@style/AppThemeWithoutNavbar"/>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
+
+    <uses-permission android:name="android.Manifest.permission.RECORD_AUDIO" />
 
 </manifest>
