--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
-    implementation 'com.google.firebase:firebase-messaging:20.1.5';
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'
+    implementation 'com.google.android.material:material:1.1.0';
 }
 
 
