--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResultEnvironment"/>
+        <activity android:name=".MyInfo"></activity>
+        <activity android:name=".ResultEnvironment" />
         <activity android:name=".HelpEnvironment" />
-        <activity android:name=".QuoteActivity"/>
-        <activity android:name=".ActivitySlider"/>
+        <activity android:name=".QuoteActivity" />
+        <activity android:name=".ActivitySlider" />
         <activity android:name=".Environment" />
         <activity android:name=".Statistics" />
         <activity android:name=".MainActivity">
